<resources>
    <string name="app_name">BOI: Tainted Cain Run Planner</string>
    <string name="btn_items">Items</string>
    <string name="btn_runs">Runs</string>
    <string name="title_text">Binding of Isaac\nTainted Cain Run Planner</string>
    <string name="hint_itemName">Item Name</string>
    <string name="button_addItem">Add Item</string>
    <string name="button_updatePrompt">Update Item</string>
    <string name="input_namePrompt">Enter Item Name</string>
    <string name="menu_addItem">Add</string>
    <string name="menu_deleteItem">Delete</string>
    <string name="menu_cancelItem">Cancel</string>
    <string name="menu_back">Back</string>
    <string name="button_addRun">Add Run</string>
    <string name="hint_runName">Run Name</string>
    <string name="button_addItemToRun">Add Item to Run</string>
    <string name="button_removeItemFromRun">Remove Item from Run</string>
    <string name="hint_search">Search Terms use "," for multiple terms</string>
    <string name="pick_up_spinner_2">Pick Up 2</string>
    <string name="pick_up_spinner_1">Pick Up 1</string>
    <string name="pick_up_spinner_3">Pick Up 3</string>
    <string name="pick_up_spinner_4">Pick Up 4</string>
    <string name="pick_up_spinner_5">Pick Up 5</string>
    <string name="pick_up_spinner_6">Pick Up 6</string>
    <string name="pick_up_spinner_7">Pick Up 7</string>
    <string name="pick_up_spinner_8">Pick Up 8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items">Items</string>
    <string name="menu_edit">Edit</string>
    <string name="nav_about">About</string>
    <string name="home">Home</string>
    <string name="cain_app_icon">Cain App Icon</string>
    <string name="game_title">The Binding of Isaac</string>
    <string name="TCRP">Tainted Cain Run Planner</string>
    <string name="btn_home">Home</string>
    <string name="hint_runSeed">Seed</string>
    <string name="no_items_found_text">No Items Found</string>
    <string name="no_runs_found_text">No Runs Found</string>
    <string name="itemError">Error adding item.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="user_control">User</string>
    <string name="messageLoading">Loading Runs...</string>
    <string name="runs_amount_text">Runs</string>
    <string name="run_list_type">My Runs</string>
</resources>