<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.boitcrp.activities.ItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="asa"
                    android:hint="@string/hint_itemName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup1"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_1" />

                    <Spinner
                        android:id="@+id/spinnerpickup1"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup2"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_2" />

                    <Spinner
                        android:id="@+id/spinnerpickup2"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup3"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_3" />

                    <Spinner
                        android:id="@+id/spinnerpickup3"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup4"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_4" />

                    <Spinner
                        android:id="@+id/spinnerpickup4"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup5"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_5" />

                    <Spinner
                        android:id="@+id/spinnerpickup5"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup6"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_6" />

                    <Spinner
                        android:id="@+id/spinnerpickup6"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup7"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_7" />

                    <Spinner
                        android:id="@+id/spinnerpickup7"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pickup8"
                        android:layout_width="211dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pick_up_spinner_8" />

                    <Spinner
                        android:id="@+id/spinnerpickup8"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addItem"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>